--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         width: 100%;
         background-color: rgb(220, 218, 221);
       }
+   
     </style>
 </head>
 <body>
@@ -24,8 +25,14 @@
 
     <div class="all">
       <main class="h-auto  sm:w-full md:w-3/4 lg:w-2/4 ">
-        <section class=" mx-auto bg-green-700 h-full px-16 ">
 
+        <div class="notify-section text-center mx-auto my-4 lg:w-3/6 md:w-3/6 sm:w-5/6 h-12 my-8  text-white">
+          <p id="notify-fail" class="notify bg-gray-600 mt-8 py-1.5 hidden px-2 rounded-xl">❌ invalid password, Please try again</p>
+          <p id="notify-success" class="notify bg-gray-600 mt-8 hidden py-1.5 px-2 rounded-xl">✅ Pin Matched... Secret door is opening for you</p>
+      </div>
+
+        <section class=" mx-auto bg-gray-800 rounded h-full px-16 overflow-hidden ">
+         
           <header class="overflow-hidden">
             <h1 class="sm:text-2xl md:text-4xl lg:text-4xl  mt-16 text-center border divide-light-blue-400 text-white p-4 rounded">Welcome to <span class="font-semibold">Own Bank !!</span></h1>
             </header>
